<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="54dp"
            app:srcCompat="@drawable/ic_scene_inside_family"
            tools:ignore="ContentDescription" />

        <TextView
            style="@style/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/txt_advice_when_you_re_mild_experiencing_symptoms" />

        <TextView
            style="@style/Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txt_you_re_experiencing_symptoms_of_the_virus_here_are_some_tips"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            style="@style/Question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:text="@string/txt_what_do_i_do" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="16sp"
                android:src="@drawable/ic_tick"
                tools:ignore="ContentDescription,RtlSymmetry" />

            <TextView
                style="@style/Answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_stay_home_make_sure_you_feel_better" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="16sp"
                android:src="@drawable/ic_tick"
                tools:ignore="ContentDescription,RtlSymmetry" />

            <TextView
                style="@style/Answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_don_t_go_shopping_or_have_visitors" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="16sp"
                android:src="@drawable/ic_tick"
                tools:ignore="ContentDescription,RtlSymmetry" />

            <TextView
                style="@style/Answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_ask_others_to_go_shopping_for_you_or_deliver_at_home_ask_if_someone_else_can_walk_the_dog" />
        </LinearLayout>

        <TextView
            style="@style/Question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:text="@string/txt_what_do_my_housemates_do" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="16sp"
                android:src="@drawable/ic_tick"
                tools:ignore="ContentDescription,RtlSymmetry" />

            <TextView
                style="@style/Answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_if_you_have_housemates_they_can_also_not_go_outside" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="16sp"
                android:src="@drawable/ic_tick"
                tools:ignore="ContentDescription,RtlSymmetry" />

            <TextView
                style="@style/Answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_if_no_one_had_any_symptoms_for_more_than_24_hours_you_can_go_back_outside" />
        </LinearLayout>

        <TextView
            style="@style/Question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:text="@string/txt_when_do_i_call_my_gp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="16sp"
                android:src="@drawable/ic_tick"
                tools:ignore="ContentDescription,RtlSymmetry" />

            <TextView
                style="@style/Answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_there_is_no_need_to_worry_at_this_point" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="16sp"
                android:src="@drawable/ic_tick"
                tools:ignore="ContentDescription,RtlSymmetry" />

            <TextView
                style="@style/Answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_please_do_not_visit_your_gp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ok"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="OK"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </LinearLayout>
</ScrollView>